# moosedb

./: .gitignore  Cargo.toml  README.md  todos.txt
.github/workflows/: build.yml
src/: lib.rs  main.rs
src/apis/: auth.rs  collections.rs  mod.rs  public.rs  records.rs  settings.rs
src/db/: connection.rs  mod.rs
src/utils/: mod.rs  random.rs
ui/: README.md  nuxt.config.ts  package-lock.json  package.json
ui/app/assets/css/: tailwind.css
ui/app/components/: AppAdminTable.vue  AppApiPreview.vue  AppCreateCollection.vue  AppCreateRecord.vue  AppInput.vue  AppLabel.vue  AppLink.vue  AppList.vue  AppLoading.vue  AppNavbar.vue  AppTable.vue  AppUpdateCollection.vue  Quill.vue
ui/app/components/Alerts/: AlertError.vue  Error.vue  Success.vue
ui/app/composables/: useAuthFetch.js  useAuthToken.js
ui/app/layouts/: default.vue
ui/app/middleware/: auth.js  guest.js
ui/app/pages/_/: collections.vue  index.vue  logs.vue  settings.vue
ui/app/pages/_/auth/: login.vue  signup.vue
ui/app/pages/_/settings/: index.vue
