[package]
name = "moosedb"
version = "0.1.3"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-web-httpauth = "0.8"
#rusqlite 0.37 is compaitable with r2d2, 0.38 is not
rusqlite = { version = "0.37", features = ["bundled"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-embed = "8"
mime_guess = "2"
rand = "0.9.1"
r2d2 = "0.8"
r2d2_sqlite = "0.31"
bcrypt = "0.17.0"
chrono = "0.4"
jsonwebtoken = "9"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
strip = true